[package]
name = "lightlinks-db"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1.6.0"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
